automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,7 @@
     "z = int.from_bytes(double_sha256(b'ECDSA is awesome!'), 'big')\n",
     "\n",
     "# parse the der format to get the signature\n",
-    "\n",
+    "sig = Signature.parse(der)\n",
     "\n",
     "# parse the sec format to get the public key\n",
     "\n",
