--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
     "sig = Signature.parse(der)\n",
     "\n",
     "# parse the sec format to get the public key\n",
-    "po\n",
+    "point = S256.parse()\n",
     "\n",
     "# use the verify method on S256Point to validate the signature"
    ]
