automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,9 +90,9 @@
     "sig = Signature.parse(der)\n",
     "\n",
     "# parse the sec format to get the public key\n",
-    "point = S256.parse()\n",
+    "point = S256.parse(sec)\n",
     "\n",
-    "# use the verify method on S256Point to validate the signature"
+    "# use the verify method on S256Point to validate the signature\n"
    ]
   }
  ],
