--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,8 @@
     "# parse the sec format to get the public key\n",
     "point = S256.parse(sec)\n",
     "\n",
-    "# use the verify method on S256Point to validate the signature\n"
+    "# use the verify method on S256Point to validate the signature\n",
+    "print(point.verify())"
    ]
   }
  ],
