--- a/index.ipynb
+++ b/index.ipynb
@@ -73,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from ecc import S256Point, Signature\n",
     "from helper import double_sha256\n",
@@ -90,11 +98,18 @@
     "sig = Signature.parse(der)\n",
     "\n",
     "# parse the sec format to get the public key\n",
-    "point = S256.parse(sec)\n",
+    "point = S256Point.parse(sec)\n",
     "\n",
     "# use the verify method on S256Point to validate the signature\n",
-    "print(point.verify())"
+    "print(point.verify(z, sig))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
